Fix image alignment

--- a/style.css
+++ b/style.css
@@ -142,17 +142,17 @@ a {
   border-radius: 50%;
 }
 
-/* .home-img .img-box img {
+.home-img .img-box img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   border-radius: 50%;
   display: block;
-} */
+}
 
-.home-img .img-box .img-item img {
+/* .home-img .img-box .img-item img {
   position: absolute;
   display: block;
   width: 85%;
   object-fit: cover;
-}
+} */
